// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render the circle shaped button correctly 1`] = `
<button
  className="Button circle full only-icon sc-bdVaJa bDQvHA"
  disabled={false}
  id={null}
  onClick={[Function]}
  type="button"
>
  <span>
    
  </span>
</button>
`;

exports[`Button should render the default button correctly 1`] = `
<button
  className="Button rectangle full only-icon sc-bdVaJa lgwUeo"
  disabled={false}
  id={null}
  onClick={[Function]}
  type="button"
>
  <span>
    
  </span>
</button>
`;

exports[`Button should render the disabled button correctly 1`] = `
<button
  className="Button rectangle full disabled only-icon sc-bdVaJa ddsYBn"
  disabled={true}
  id={null}
  onClick={[Function]}
  type="button"
>
  <span>
    
  </span>
</button>
`;

exports[`Button should render the ghost and disabled button correctly 1`] = `
<button
  className="Button rectangle disabled ghost only-icon sc-bdVaJa jjjiUC"
  disabled={true}
  id={null}
  onClick={[Function]}
  type="button"
>
  <span>
    
  </span>
</button>
`;

exports[`Button should render the ghost button correctly 1`] = `
<button
  className="Button rectangle ghost only-icon sc-bdVaJa hWvMox"
  disabled={false}
  id={null}
  onClick={[Function]}
  type="button"
>
  <span>
    
  </span>
</button>
`;
